fix: card styles - align pronunciation

--- a/src/pages/textbook/components/word-card/word-card.scss
+++ b/src/pages/textbook/components/word-card/word-card.scss
@@ -55,7 +55,7 @@
         margin-bottom: 0;
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         gap: 1rem;
 
         & span:first-child {
